# quizly

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  __init__.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260313_0001_initial.py
backend/app/: main.py
backend/app/agents/: quiz_agent.py
backend/app/api/: __init__.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/app/db/: __init__.py  base.py  models.py  session.py  types.py
backend/app/middleware/: rate_limit.py  request_id.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: __init__.py  router.py
backend/app/modules/documents/: __init__.py  router.py
backend/app/modules/quiz/: __init__.py  router.py
backend/app/schemas/: __init__.py  auth.py  documents.py  quiz.py
backend/app/services/: __init__.py  embedding.py  ingestion.py  llm.py  metrics.py  retrieval.py
backend/tests/: conftest.py  test_adaptive_decisions.py  test_auth.py  test_chunking_logic.py  test_health.py  test_ingestion.py  test_quiz_prompt_mode.py  test_quizly.db  test_retrieval_filters.py
frontend/: commit.sh  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: MainLayout.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DocumentQuiz.tsx  Home.tsx  Login.tsx  Quiz.tsx  Todos.tsx  (+2 more)
(+7 files in other folders)
