[project]
name = "quizly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "langraph",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.67.0",
    "pydantic-settings>=2.13.1",
]
