[project]
name = "quizly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "groq>=0.32.0",
    "langgraph>=0.6.7",
    "openai>=1.108.2",
    "pgvector>=0.4.1",
    "prometheus-client>=0.23.1",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.67.0",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pymupdf>=1.26.5",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
